# zarr-vectors-tools

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
benchmarks/: 01_size_scaling.ipynb  02_data_types.ipynb  03_filtering.ipynb  README.md  _build.py
docs/: conf.py  enrichments.md  examples.md  headers.md  index.rst  requirements-docs.txt
docs/_static/: custom.css
docs/algorithms/: graph_clustering.md  graph_components.md  graph_search.md  index.md  mesh_attributes.md  mesh_query.md  mesh_summary.md
docs/api/: algorithms.rst  cli.rst  export.rst  headers.rst  index.rst  ingest.rst  multiresolution.rst
docs/benchmarks/: index.md
docs/export/: index.md  meshes.md  point_clouds.md  skeletons.md  streamlines.md
docs/getting_started/: cli.md  concepts.md  installation.md  quickstart.md  zarr_vectors.md
docs/how_to/: choose_chunk_and_bin.md  compressors.md  large_scale_pipelines.md  parallelism.md
docs/ingest/: em_skeletons.md  graphs.md  index.md  lines.md  meshes.md  point_clouds.md  polylines_streamlines.md  skeletons.md  tractography.md  tractography_at_scale.md
docs/modules/: index.md
docs/multiresolution/: building_pyramids.md  concepts.md  cross_level_links.md  index.md  object_selection.md  refresh.md  strategies.md
docs/upstream/: links-merge-findings.md
examples/: 01_point_clouds.ipynb  02_lines.ipynb  04_graphs.ipynb  05_skeletons.ipynb  06_meshes.ipynb  07_network_metrics.ipynb  07_precomputed.ipynb  08_network_search.ipynb  09_mesh_algorithms.ipynb  10_graph_clustering.ipynb
scripts/: add_random_sample_attribute.py  ingest_cutout.py  ingest_cutout_parralel.py  ingest_mouselight.py  ingest_trk_parallel.py  ingest_trx.py  resume_trk_pyramid.py
tests/: _source_helpers.py  conftest.py  test_algorithm_helpers.py  test_cli.py  test_coarsen_implicit_sequential.py  test_csv_points.py  test_edgelist.py  test_edit_pyramid_refresh.py  test_enrichments_graphs.py  test_enrichments_points.py  test_enrichments_polylines.py  test_enrichments_swc.py  test_forest_vectorized.py  test_graph_clustering.py  test_graph_components.py  test_graph_search.py  test_lines.py  test_mesh_attributes.py  test_mesh_query.py  test_mesh_summary.py  test_meshes.py  test_multiscale_links.py  test_obj_object_id.py  test_object_selection.py  test_per_level_chunk_shape.py  test_per_object_pyramid.py  test_pipelines.py  test_polyline_coarsen_chunk_local.py  test_polyline_decimate.py  test_polylines.py  test_precomputed.py  test_precomputed_skeletons.py  test_single_array_enumeration.py  test_skeleton_coarsen.py  test_swc.py  test_trk_registration.py
tests/integration/: test_binning_sparsity.py  test_lazy_sharding_rechunk.py
zarr_vectors_tools/: __init__.py  __main__.py  _manifests.py
zarr_vectors_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zarr_vectors_tools/algorithms/: __init__.py  _chunk_neighbours.py  _cross_chunk_index.py  _indexing.py  _link_attributes.py  _links.py  graph_clustering.py  graph_components.py  graph_search.py  mesh_attributes.py  mesh_query.py  mesh_summary.py
zarr_vectors_tools/cli/: __init__.py  _args.py  convert.py  pyramid.py
zarr_vectors_tools/export/: csv_points.py  obj.py  ply.py  precomputed.py  swc.py  trk.py  trx.py
zarr_vectors_tools/headers/: __init__.py  formats.py  registry.py
zarr_vectors_tools/ingest/: _parallel.py  _point_enrichments.py  _polyline_enrichments.py  _tree_enrichments.py  csv_points.py  edgelist.py  graphml.py  las.py  lines.py  obj.py  ply.py  precomputed.py  precomputed_plain_skeletons.py  precomputed_skeletons.py  stl.py  swc.py  tck.py  trk.py  trk_parallel.py  trx.py  trx_parallel.py
zarr_vectors_tools/multiresolution/: _ccl_compat.py  _forest.py  coarsen.py  coarsen_implicit.py  constants.py  object_index.py  object_selection.py  refresh.py  skeleton_graph.py
zarr_vectors_tools/multiresolution/strategies/: graphs.py  meshes.py  points.py  polylines.py  skeletons.py
