[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr-vectors-tools"
version = "0.2.0"
description = "Ingest and export workflows for the Zarr Vector Format (ZVF). Wraps third-party readers/writers (nibabel, laspy, plyfile, networkx, trx-python) on top of zarr-vectors."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew Keenlyside"},
    {name = "Forrest Collman"},
]
keywords = ["zarr", "point-cloud", "mesh", "skeleton", "streamline", "connectomics", "spatial", "ingest", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Core provides the read/write APIs, spatial/boundary helpers, and a basic
    # multi-scale layer; the rich coarsening/compute layer lives here in
    # zarr_vectors_tools.multiresolution. Tracks the post-0.2.0 dev line that
    # carries PR #26 (types.skeletons + cells cross-chunk-link layout) and PR #27
    # (plug-in strategy registry); the `.dev0` lower bound accepts the current
    # setuptools-scm dev version (0.2.1.devN) and excludes the feature-less 0.2.0
    # release. Bump to >=0.3 once core tags a v0.3.0 release.
    "zarr-vectors>=0.2.1.dev0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
las = ["laspy>=2.4"]
ply = ["plyfile>=1.0"]
streamlines = ["nibabel>=5.0", "trx-python>=0.3"]
graph = ["networkx>=3.0"]
points-enrichment = ["scipy>=1.10"]
# Mesh pyramid coarsening (quadric decimation + vertex clustering) in
# zarr_vectors_tools.multiresolution.strategies.meshes.
mesh = ["pyfqmr>=0.2", "scipy>=1.10"]
# Precomputed spatial-index skeleton ingest (`.frags` MapBuffers from a
# CloudVolume precomputed layer, e.g. flywire). Heavy readers kept out of
# the core library and gated behind this extra.
precomputed = ["cloud-volume>=8.0", "mapbuffer>=0.7", "cloud-files>=4.0"]
# Scale the ingest across worker processes (run_ingest(workers=...) / --workers).
parallel = ["dask[distributed]>=2024.0"]
# Requires a RAPIDS-compatible CUDA environment. Install per https://docs.rapids.ai.
gpu = ["cudf"]
all = [
    "laspy>=2.4",
    "plyfile>=1.0",
    "nibabel>=5.0",
    "trx-python>=0.3",
    "networkx>=3.0",
    "scipy>=1.10",
    "pyfqmr>=0.2",
    "cloud-volume>=8.0",
    "mapbuffer>=0.7",
    "cloud-files>=4.0",
    "dask[distributed]>=2024.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[project.scripts]
zvtools = "zarr_vectors_tools.cli:main"

[tool.setuptools.packages.find]
include = ["zarr_vectors_tools*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # ZVF stores every per-chunk array as Zarr's variable-length-bytes dtype,
    # which has no stable Zarr v3 spec yet — the warning fires on every array
    # and drowns the test output.  Silence just that one category.
    "ignore::zarr.errors.UnstableSpecificationWarning",
]
